--- a/css/styles.css
+++ b/css/styles.css
@@ -202,7 +202,6 @@ button {
 }
 
 .hero-button {
-  display: inline-block;
   color: var(--color-main);
   background-color: var(--color-primary-brand);
   padding: 16px 32px;
@@ -506,10 +505,14 @@ button {
   color: var(--color-accent);
 }
 
-.title-social {
+.footer-title {
   font-weight: 500;
   color: var(--color-main);
   margin-bottom: 16px;
+}
+
+.footer-social {
+  margin-right: 80px;
 }
 
 .footer-social .socials-list {
@@ -528,6 +531,51 @@ button {
 .footer-social .socials-icon {
   width: 24px;
   height: 24px;
+}
+
+/* Footer form */
+
+.label-subscribe {
+  display: block;
+}
+
+.input-subscribe-mail {
+  margin-right: 22px;
+  padding: 8px 16px;
+  width: 264px;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: var(--color-accent);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  background-color: transparent;
+}
+
+.input-subscribe-mail::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.button-subscribe {
+  display: inline-flex;
+  gap: 16px;
+  color: var(--color-main);
+  background-color: var(--color-primary-brand);
+  padding: 8px 24px;
+  border-radius: 4px;
+
+  transition: background-color 250ms var(--cubic-bezier);
+}
+
+.button-subscribe:hover,
+.button-subscribe:focus {
+  background-color: var(--color-pressed-state);
+}
+
+.subscribe-icon {
+  width: 24px;
+  height: 24px;
+  fill: currentColor;
 }
 
 .backdrop.is-hidden {
@@ -561,7 +609,7 @@ button {
   width: 100%;
   height: 100%;
   max-width: 408px;
-  max-height: 576px;
+  max-height: 600px;
   background-color: var(--color-modal-background);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -577,6 +625,7 @@ button {
   align-items: center;
   justify-content: center;
   margin-left: auto;
+  margin-bottom: 24px;
   width: 24px;
   height: 24px;
   background-color: var(--color-accent);
@@ -596,4 +645,133 @@ button {
 .close-icon {
   width: 8px;
   height: 8px;
+}
+
+.title-modal {
+  margin-bottom: 16px;
+  font-weight: 500;
+  text-align: center;
+  color: var(--color-dark);
+}
+
+.form-group {
+  margin-bottom: 16px;
+}
+
+.form-field {
+  margin-bottom: 8px;
+}
+
+.form-label {
+  display: block;
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--color-subtle-text);
+}
+
+.form-field:first-child .form-label {
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+}
+
+.form-container {
+  position: relative;
+}
+
+.form-input {
+  width: 100%;
+  height: 40px;
+  padding: 8px 16px;
+  padding-left: 38px;
+  font-size: 12px;
+  line-height: 1.33;
+  color: currentColor;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  background-color: transparent;
+  transition: border 250ms var(--cubic-bezier);
+}
+
+.form-input:focus {
+  outline: none;
+  border-color: var(--color-primary-brand);
+}
+
+.form-input:focus + .form-icon {
+  fill: var(--color-primary-brand);
+}
+
+.form-input::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.form-field-text .form-input {
+  padding-left: 16px;
+}
+
+.form-comment {
+  height: 120px;
+  resize: none;
+}
+
+.form-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  width: 18px;
+  height: 24px;
+  transform: translateY(-50%);
+  fill: var(--color-dark);
+  transition: fill 250ms var(--cubic-bezier);
+}
+
+.form-policy {
+  margin-bottom: 24px;
+}
+
+.form-checkbox:focus + .label-policy::before {
+  border-color: var(--color-primary-brand);
+  outline: 1px solid var(--color-primary-brand);
+}
+
+.form-checkbox:checked + .label-policy::before {
+  background-color: var(--color-primary-brand);
+  background-origin: border-box;
+  background-image: url(../images/checkbox.svg);
+  background-size: contain;
+  border-color: transparent;
+}
+
+.label-policy::before {
+  content: "";
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  border: 1.25px solid var(--color-dark);
+  border-radius: 2px;
+  cursor: pointer;
+  transition: background-color 250ms var(--cubic-bezier),
+    background-image 250ms var(--cubic-bezier), border 250ms var(--cubic-bezier);
+}
+
+.label-policy {
+  display: flex;
+  gap: 8px;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  color: #757575;
+}
+
+.link-policy {
+  text-decoration: underline;
+  color: var(--color-primary-brand);
+}
+
+.contact-form .hero-button {
+  display: block;
+  margin: 0 auto;
+  min-width: 169px;
 }
