--- a/css/styles.css
+++ b/css/styles.css
@@ -605,11 +605,13 @@ button {
 }
 
 .modal {
+  position: relative;
   padding: 24px;
+  padding-top: 72px;
   width: 100%;
   height: 100%;
   max-width: 408px;
-  max-height: 600px;
+  max-height: 590px;
   background-color: var(--color-modal-background);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -621,11 +623,12 @@ button {
 }
 
 .close-modal {
+  position: absolute;
+  top: 24px;
+  right: 24px;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: auto;
-  margin-bottom: 24px;
   width: 24px;
   height: 24px;
   background-color: var(--color-accent);
@@ -681,6 +684,7 @@ button {
 }
 
 .form-input {
+  display: block;
   width: 100%;
   height: 40px;
   padding: 8px 16px;
